@@ -8,6 +8,9 @@ v. 1.3.0 (the future)
 		
 	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
 		
+		
+	* New feature: When copying a site, links internal to that site (such as links in a content block that point to another page in the site) are now updated to point to the appropriate place in the new version of the site. (Adam Franco)
+		
 	* Bug Fix: When editing slots, information about whether the slot was in use not or not is now accurate. (Alex Chapin)
 		
 	* Change: Added new template to config.inc.php. (Alex Chapin)		
